# Corporate-Serf-Dashboard

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  app.py  config.toml  config_controller.py  config_service.py  example.toml  file_watchdog.py  get.ps1  install.ps1  kovaaks_api_service.py  kovaaks_data_service.py  message_queue.py  mypy.ini  plot_service.py  pyproject.toml  requirements.txt  shared_functions.py  utilities.py  version.txt
.github/workflows/: ci.yml  gates.yml  pylint.yml
assets/: dashAgGridComponentFunctions.js  dashAgGridFunctions.js  homeGraphResize.js  stylesheet.css  tooltips.css
assets/icons/: README.md
docs/: api_retry_proposal.md  api_retry_proposal_v2.md  api_retry_urllib3_migration_proposal.md  architecture.md  background_percentile_warmup_proposal.md  ci_gates_proposal.md  codebase_improvement_proposals.md  config_initialization_proposal.md  decision_log.md  kovaaks_api_notes.md  leaderboard_id_seeding_proposal.md  notification_system_proposal.md  playlist_generator_refactor_proposal.md  playlist_grid_sticky_headers_proposal.md  playlist_overview_proposal.md  playlist_progressive_fill_proposal.md  playlist_rekey_proposal.md  playlist_scenarios_proposal.md  product.md  refleks_learnings.md  relative_timestamp_proposal.md  relative_timestamp_proposal_v2.md  relative_timestamp_proposal_v3.md  relative_timestamp_proposal_v4.md  relative_timestamp_proposal_v5.md  relative_timestamp_proposal_v6.md  release_distribution_proposal.md  roadmap.md  run_event_coalescing_proposal.md  run_history_proposal.md  scenario_rank_eventual_consistency_proposal.md  scenario_rank_eventual_consistency_proposal_v10.md  scenario_rank_eventual_consistency_proposal_v11.md  scenario_rank_eventual_consistency_proposal_v12.md  scenario_rank_eventual_consistency_proposal_v13.md  scenario_rank_eventual_consistency_proposal_v14.md  scenario_rank_eventual_consistency_proposal_v15.md  scenario_rank_eventual_consistency_proposal_v16.md  scenario_rank_eventual_consistency_proposal_v5.md  scenario_rank_eventual_consistency_proposal_v6.md  (+12 more)
docs/system diagram/: Corporate-Serf-Dashboard-2025-09-07-0124.excalidraw
ignore/: README.md
resources/benchmarks/: 350fs.json  773TS v3.json  AIMERZ+ BENCHMARKS EASY S1.json  AIMERZ+ BENCHMARKS HARD S1.json  AimSpeed Benchmark 2 Hard.json  AimSpeed Benchmarks 2 Easy.json  AimSpeed Easy Benchmarks.json  Aimerz+ Dynamic Clicking Benchmarks Easy.json  Aimerz+ Hard S0 - Worthless.json  Aimerz+ Medium S0 - Worthless.json  Aimerz+ Precise Tracking Benchmarks Easy.json  Aimerz+ Precise Tracking Benchmarks Hard.json  Aimerz+ Reactive Tracking Benchmark Hard.json  Aimerz+ SpeedTS Benchmarks Easy.json  Aimerz+ SpeedTS Benchmarks Hard.json  Aimspeed Benchmark 2 Normal.json  Amare's Quest.json  Angelic Easy Tac FPS Benchmarks.json  Angelic Intermediate TacFPS Benches.json  Anima Micro Benchmark v2.json  AoiAimers S1 - Worthless.json  AoiAimers S2 - Worthless.json  Astro Tracking Bench - Easy.json  Astro Tracking Bench - Hard.json  Astro Tracking Bench - Normal.json  Avasive S1 - Ascension (Intermediate).json  Avasive S1 - Enlightenment (Advanced).json  Avasive S1 - Genesis (Novice).json  Benchmarks - Reactive by slapped.json  COMMUNITY BENCHMARKS EASY.json  COMMUNITY BENCHMARKS.json  Cat Burg benchmark.json  DM Poke Static S2 L1 - Worthless.json  DM Poke Static S2 L2 - Worthless.json  DM Poke Static S2 L3 - Worthless.json  DM Poke Static S2 L4 - Worthless.json  DM Poke Static S2 L5 - Worthless.json  DM Poke Static S2 L6 - Worthless.json  DM Poke Static S2 L7 - Worthless.json  DM Static Benchmarks Boss Pokeball S3.json  (+184 more)
resources/evxl/: benchmarks.json
resources/playlists/: Viscose benchmarks easier scenarios.json  Viscose benchmarks hard scenarios.json  Viscose benchmarks medium scenarios.json  Voltaic Advanced Benchmarks S5.json  Voltaic Intermediate Benchmarks S5.json  Voltaic Novice Benchmarks S5.json  voltaic_novice_season_5.json
scripts/: launch_bootstrap.ps1  launcher.ps1  release_job.py
source/: __init__.py  app.py  app_shell.py  health.py
tests/: ci_red_path_probe.py  conftest.py  test_api_service.py  test_app_server_socket.py  test_app_shell.py  test_app_version.py  test_benchmark_importer.py  test_build_info.py  test_config_service.py  test_dash_logging_background.py  test_data_service_extract.py  test_docs.py  test_file_watchdog_rank_refresh.py  test_health.py  test_home_build_scenario_figure.py  test_home_rank_format.py  test_home_run_events.py  test_leaderboard_seed_merge.py  test_local_icon.py  test_paths.py  test_percentile_warmup_service.py  test_playlist_overview_service.py  test_playlist_pages.py  test_playlist_rekey.py  test_playlist_scenarios_service.py  test_playlist_visibility_service.py  test_plot_service.py  test_release_job.py  test_release_scripts.py  test_scenario_rank_freshness.py  test_utilities.py
(+52 files in other folders)
