[project]
name = "Corporate-Serf-Dashboard"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dash>=3.3.0",
    "dash-ag-grid>=35.2.0",
    "dash-extensions>=2.0.4",
    "dash-mantine-components>=2.4.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "pydantic>=2.12.4",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "sortedcontainers>=2.4.0",
    "waitress>=3.0.2",
    "watchdog>=6.0.0",
]

#[project.scripts]
#test = "scripts.test:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv]
required-version = "==0.11.26"

[tool.uv.build-backend]
module-root = ""
module-name = "source"

[tool.ruff]
line-length = 88
target-version = "py314"
# pre-commit passes filenames explicitly; without this, exclusions
# (PR-2's lint.exclude for scripts/) are ignored for explicit paths.
force-exclude = true

[tool.ruff.lint]
extend-select = [
    "I",    # import sorting (from PR-1)
    "E",    # pycodestyle errors, incl. E501 line length
    "W",    # pycodestyle warnings
    "D1",   # missing docstrings (presence only)
    "PL",   # pylint-derived rules (design metrics etc.)
    "ARG",  # unused arguments
    "G",    # logging format (G004 = f-string in logging call)
    "BLE",  # blind except
]
ignore = [
    "PLR2004",  # magic-value comparisons — not part of the old bar
]
exclude = ["scripts/**"]  # lint-only exclusion (frozen decision 3);
                          # holds for explicit paths via force-exclude (PR-1)

[tool.ruff.lint.pycodestyle]
max-line-length = 120  # hard ceiling; formatter wraps at 88

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D1", "PLR09", "ARG"]

[tool.mypy]
disable_error_code = ["import-untyped"]
files = ["source"]

[tool.pytest.ini_options]
addopts = "-q -p no:cacheprovider"
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.35.0",
    "mypy>=1.18.2",
    "pandas-stubs~=2.3.3",
    "pre-commit>=4.6.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.5",
    "scipy-stubs>=1.16.3.0",
]
