[project]
name = "Corporate-Serf-Dashboard"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
# Lower bounds track the versions actually locked and tested (uv.lock is the
# source of truth for what gets installed). They are not a compatibility
# promise for older releases: resolving at the previous floors produced an app
# that could not import at all. Refresh them opportunistically during an
# upgrade rather than treating it as a per-bump chore.
dependencies = [
    "dash>=4.4.0",
    "dash-ag-grid>=35.3.0",
    "dash-extensions>=2.0.6",
    "dash-mantine-components>=2.8.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "scipy>=1.18.0",
    "sortedcontainers>=2.4.0",
    "waitress>=3.0.2",
    "watchdog>=6.0.0",
]

#[project.scripts]
#test = "scripts.test:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv]
required-version = "==0.11.26"

[tool.uv.build-backend]
module-root = ""
module-name = "source"

[tool.ruff]
line-length = 88
target-version = "py314"
# pre-commit passes filenames explicitly; without this, exclusions
# (PR-2's lint.exclude for scripts/) are ignored for explicit paths.
force-exclude = true

[tool.ruff.lint]
extend-select = [
    "I",    # import sorting (from PR-1)
    "E",    # pycodestyle errors, incl. E501 line length
    "W",    # pycodestyle warnings
    "D1",   # missing docstrings (presence only)
    "PL",   # pylint-derived rules (design metrics etc.)
    "ARG",  # unused arguments
    "G",    # logging format (G004 = f-string in logging call)
    "BLE",  # blind except
]
ignore = [
    "PLR2004",  # magic-value comparisons — not part of the old bar
]
exclude = ["scripts/**"]  # lint-only exclusion (frozen decision 3);
                          # holds for explicit paths via force-exclude (PR-1)

[tool.ruff.lint.pycodestyle]
max-line-length = 120  # hard ceiling; formatter wraps at 88

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D1", "PLR09", "ARG"]

[tool.mypy]
disable_error_code = ["import-untyped"]
files = ["source"]

[tool.pytest.ini_options]
addopts = "-q -p no:cacheprovider"
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.68.1",
    "mypy>=2.3.0",
    # Compatible-release pin rather than a floor: stubs describe a specific
    # pandas major/minor, so bump this in step with pandas itself.
    "pandas-stubs~=3.0.3",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
    "scipy-stubs>=1.18.0.1",
]
